--- a/services/didwebvh-endorser-service/charts/dev/values.yaml
+++ b/services/didwebvh-endorser-service/charts/dev/values.yaml
@@ -17,7 +17,7 @@ endorser-service:
     agentUrl: "https://endorser-agent-webvh-dev.apps.silver.devops.gov.bc.ca"
     adminUrl: "https://endorser-agent-webvh-admin-dev.apps.silver.devops.gov.bc.ca"
     plugin-config.yml:
-      webvh:
+      did-webvh:
         server_url: "https://registry-dev.digitaltrust.gov.bc.ca"
 
   proxy:
