--- a/services/vc-authn-oidc/charts/prod/Chart.yaml
+++ b/services/vc-authn-oidc/charts/prod/Chart.yaml
@@ -2,9 +2,9 @@ apiVersion: v2
 name: vc-authn-oidc
 description: vc-authn-oidc - prod
 type: application
-version: "0.6.0"
-appVersion: "2.3.5"
+version: 0.6.1
+appVersion: "2.3.6"
 dependencies:
   - name: vc-authn-oidc
-    version: "0.6.0"
+    version: 0.6.1
     repository: https://openwallet-foundation.github.io/helm-charts/
