--- a/services/vc-authn-oidc/charts/prod/values.yaml
+++ b/services/vc-authn-oidc/charts/prod/values.yaml
@@ -48,7 +48,7 @@ vc-authn-oidc:
       cpu: 10m
       memory: 128Mi
   autoscaling:
-    enabled: false
+    enabled: true
     minReplicas: 3
     maxReplicas: 5
     targetCPUUtilizationPercentage: 80
@@ -154,3 +154,16 @@ vc-authn-oidc:
     livenessProbe:
       enabled: true
       timeoutSeconds: 10
+  redis:
+    enabled: false
+  externalRedis:
+    host: "redis-shared-headless"
+    port: 6379
+    database: 0
+    auth:
+      enabled: true
+      existingSecret: redis-shared
+      password: ""
+    tls:
+      enabled: false
+      existingSecret: ""
