--- a/services/didwebvh-endorser-service/charts/sandbox/values.yaml
+++ b/services/didwebvh-endorser-service/charts/sandbox/values.yaml
@@ -3,6 +3,8 @@ global:
 
 endorser-service:
   api:
+    image:
+      tag: 1.1.2
     acapyAdminUrl: https://endorser-agent-webvh-admin-sandbox.apps.silver.devops.gov.bc.ca
     publicName: "BC Endorser Service (sandbox)"
     publicDesc: "An endorser service for BC issuer agents"
@@ -14,6 +16,8 @@ endorser-service:
     autoEndorseTxnTypes: ""
 
   acapy:
+    image:
+      tag: 1.1.2
     agentUrl: "https://endorser-agent-webvh-sandbox.apps.silver.devops.gov.bc.ca"
     adminUrl: "https://endorser-agent-webvh-admin-sandbox.apps.silver.devops.gov.bc.ca"
     plugin-config.yml:
