--- a/services/mediator-credo/charts/dev/values.yaml
+++ b/services/mediator-credo/charts/dev/values.yaml
@@ -4,9 +4,8 @@ didcomm-mediator-credo:
     className: ""
     annotations:
       route.openshift.io/termination: edge
-      haproxy.router.openshift.io/disable_cookies: "false"
-      haproxy.router.openshift.io/cookie_name: ROUTEID
-      haproxy.router.openshift.io/timeout: "3600s"
+      # kubernetes.io/ingress.class: nginx
+      # kubernetes.io/tls-acme: "true"
     labels:
       certbot-managed: "true"
     hosts:
